Make processor enabled runtime